--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 <div class="card-body">
                     <div class="close-btn">
                         <a href="#">
-                            <svg class="icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                            <svg class="icon" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 24 24"
                                 stroke="currentColor">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="4"
                                     d="M6 18L18 6M6 6l12 12" />
