changing functions name to meaningful

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <h1>Cruise Queen</h1>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
                 industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
-                scrambled it to make a type specimen book./p>
+                scrambled it to make a type specimen book.</p>
         </div>
 
 
@@ -61,11 +61,11 @@
                 <div>
                     <label for="">First Class ($150)</label>
                     <div class="f-class">
-                        <input id="first-class" onchange="handleChange('first-class')" value="0"
+                        <input id="first-class" onchange="handleInputChange('first-class')" value="0"
                             class="inp-style inp-width" type="number" name="">
                         <div class="plus-minus-btn">
-                            <button onclick="handleClick('first-class','increase')">+</button>
-                            <button onclick="handleClick('first-class','decrease')">-</button>
+                            <button onclick="handleBtnClick('first-class','increase')">+</button>
+                            <button onclick="handleBtnClick('first-class','decrease')">-</button>
                         </div>
                     </div>
                 </div>
@@ -76,11 +76,11 @@
                 <div>
                     <label for="">Economy ($100)</label>
                     <div class="f-class">
-                        <input id="economy-class" onchange="handleChange(this.id)" class="inp-style inp-width" value="0"
+                        <input id="economy-class" onchange="handleInputChange(this.id)" class="inp-style inp-width" value="0"
                             type="number" name="">
                         <div class="plus-minus-btn">
-                            <button onclick="handleClick('economy-class','increase')">+</button>
-                            <button onclick="handleClick('economy-class','decrease')">-</button>
+                            <button onclick="handleBtnClick('economy-class','increase')">+</button>
+                            <button onclick="handleBtnClick('economy-class','decrease')">-</button>
                         </div>
                     </div>
                 </div>
